y.output
Nonterminals useless in grammar

    LOCAL_DECLARATION_LIST


Terminals unused in grammar

    ELSE
    ELIF
    SCAN
    OR
    AND
    NOT
    IC


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: DECLARATION_LIST

    2 DECLARATION_LIST: DECLARATION_LIST DECLARATION
    3                 | DECLARATION

    4 DECLARATION: VARIABLE_DECLARATION
    5            | FUNCTION_DECLARATION

    6 VARIABLE_DECLARATION: VARIABLE_TYPE IDENTIFIER_NT SEMICOLON

    7 FUNCTION_DECLARATION: VARIABLE_TYPE FUNCTION_IDENTIFIER_NT ONB PARAMS CNB COMPOUND_STATEMENT

    8 PARAMS: PARAM_LIST_NT
    9       | %empty

   10 PARAM_LIST_NT: PARAM_LIST_NT COMMA PARAM
   11              | PARAM

   12 PARAM: VARIABLE_TYPE IDENTIFIER_NT

   13 STATEMENT_LIST: STATEMENT_LIST STATEMENT
   14               | STATEMENT

   15 STATEMENT: ASSIGNMENT_STATEMENT
   16          | COMPOUND_STATEMENT
   17          | IF_STATEMENT
   18          | WHILE_STATEMENT
   19          | FOR_STATEMENT
   20          | INCREMENT_STATEMENT
   21          | DECREMENT_STATEMENT
   22          | LOCAL_DECLARATION
   23          | PRINT_STATEMENT

   24 PRINT_STATEMENT: PRINT ONB PRINT_ITEM CNB SEMICOLON

   25 COMPOUND_STATEMENT: OFB STATEMENT_LIST CFB

   26 IF_STATEMENT: IF ONB EXPRESSION CNB STATEMENT

   27 WHILE_STATEMENT: WHILE ONB EXPRESSION CNB STATEMENT

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

   29 INCREMENT_STATEMENT: IDENTIFIER_NT INC SEMICOLON

   30 DECREMENT_STATEMENT: IDENTIFIER_NT DEC SEMICOLON

   31 VARIABLE_TYPE: INT

   32 LOCAL_DECLARATION: VARIABLE_TYPE IDENTIFIER_NT SEMICOLON

   33 ASSIGNMENT_STATEMENT: IDENTIFIER_NT EQUALTO EXPRESSION SEMICOLON

   34 EXPRESSION: PEXPRESSION
   35           | PEXPRESSION PLUS PEXPRESSION
   36           | PEXPRESSION MINUS PEXPRESSION
   37           | PEXPRESSION MULTIPLY PEXPRESSION
   38           | PEXPRESSION BAND PEXPRESSION
   39           | PEXPRESSION BXOR PEXPRESSION
   40           | PEXPRESSION BOR PEXPRESSION
   41           | PEXPRESSION GE PEXPRESSION
   42           | PEXPRESSION LE PEXPRESSION
   43           | PEXPRESSION GT PEXPRESSION
   44           | PEXPRESSION LT PEXPRESSION
   45           | PEXPRESSION EE PEXPRESSION
   46           | PEXPRESSION NEQ PEXPRESSION

   47 PEXPRESSION: INTEGER_NT
   48            | IDENTIFIER_NT
   49            | ONB EXPRESSION CNB

   50 PRINT_ITEM: IDENTIFIER_NT

   51 INTEGER_NT: NUMBER

   52 IDENTIFIER_NT: IDENTIFIER

   53 FUNCTION_IDENTIFIER_NT: FUNCTION_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT <node> (258) 31
    IDENTIFIER <node> (259) 52
    FUNCTION_IDENTIFIER <node> (260) 53
    NUMBER <node> (261) 51
    COMMA <node> (262) 10
    SEMICOLON <node> (263) 6 24 28 29 30 32 33
    OFB <node> (264) 25
    CFB <node> (265) 25
    ONB <node> (266) 7 24 26 27 28 49
    CNB <node> (267) 7 24 26 27 28 49
    PLUS <node> (268) 35
    MINUS <node> (269) 36
    MULTIPLY <node> (270) 37
    IF <node> (271) 26
    ELSE <node> (272)
    ELIF <node> (273)
    WHILE <node> (274) 27
    FOR <node> (275) 28
    PRINT <node> (276) 24
    SCAN <node> (277)
    OR <node> (278)
    AND <node> (279)
    NOT <node> (280)
    EQUALTO <node> (281) 33
    LT <node> (282) 44
    GT <node> (283) 43
    LE <node> (284) 42
    GE <node> (285) 41
    EE <node> (286) 45
    NEQ <node> (287) 46
    INC <node> (288) 29
    DEC <node> (289) 30
    IC <node> (290)
    BAND <node> (291) 38
    BOR <node> (292) 40
    BXOR <node> (293) 39


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    PROGRAM <node> (40)
        on left: 1
        on right: 0
    DECLARATION_LIST <node> (41)
        on left: 2 3
        on right: 1 2
    DECLARATION <node> (42)
        on left: 4 5
        on right: 2 3
    VARIABLE_DECLARATION <node> (43)
        on left: 6
        on right: 4
    FUNCTION_DECLARATION <node> (44)
        on left: 7
        on right: 5
    PARAMS <node> (45)
        on left: 8 9
        on right: 7
    PARAM_LIST_NT <node> (46)
        on left: 10 11
        on right: 8 10
    PARAM <node> (47)
        on left: 12
        on right: 10 11
    STATEMENT_LIST <node> (48)
        on left: 13 14
        on right: 13 25
    STATEMENT <node> (49)
        on left: 15 16 17 18 19 20 21 22 23
        on right: 13 14 26 27 28
    PRINT_STATEMENT <node> (50)
        on left: 24
        on right: 23
    COMPOUND_STATEMENT <node> (51)
        on left: 25
        on right: 7 16
    IF_STATEMENT <node> (52)
        on left: 26
        on right: 17
    WHILE_STATEMENT <node> (53)
        on left: 27
        on right: 18
    FOR_STATEMENT <node> (54)
        on left: 28
        on right: 19
    INCREMENT_STATEMENT <node> (55)
        on left: 29
        on right: 20 28
    DECREMENT_STATEMENT <node> (56)
        on left: 30
        on right: 21
    VARIABLE_TYPE <node> (57)
        on left: 31
        on right: 6 7 12 28 32
    LOCAL_DECLARATION <node> (58)
        on left: 32
        on right: 22
    ASSIGNMENT_STATEMENT <node> (59)
        on left: 33
        on right: 15
    EXPRESSION <node> (60)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 26 27 28 33 49
    PEXPRESSION <node> (61)
        on left: 47 48 49
        on right: 34 35 36 37 38 39 40 41 42 43 44 45 46
    PRINT_ITEM <node> (62)
        on left: 50
        on right: 24
    INTEGER_NT <node> (63)
        on left: 51
        on right: 47
    IDENTIFIER_NT <node> (64)
        on left: 52
        on right: 6 12 29 30 32 33 48 50
    FUNCTION_IDENTIFIER_NT <node> (65)
        on left: 53
        on right: 7


State 0

    0 $accept: . PROGRAM $end

    INT  shift, and go to state 1

    PROGRAM               go to state 2
    DECLARATION_LIST      go to state 3
    DECLARATION           go to state 4
    VARIABLE_DECLARATION  go to state 5
    FUNCTION_DECLARATION  go to state 6
    VARIABLE_TYPE         go to state 7


State 1

   31 VARIABLE_TYPE: INT .

    $default  reduce using rule 31 (VARIABLE_TYPE)


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 8


State 3

    1 PROGRAM: DECLARATION_LIST .
    2 DECLARATION_LIST: DECLARATION_LIST . DECLARATION

    INT  shift, and go to state 1

    $default  reduce using rule 1 (PROGRAM)

    DECLARATION           go to state 9
    VARIABLE_DECLARATION  go to state 5
    FUNCTION_DECLARATION  go to state 6
    VARIABLE_TYPE         go to state 7


State 4

    3 DECLARATION_LIST: DECLARATION .

    $default  reduce using rule 3 (DECLARATION_LIST)


State 5

    4 DECLARATION: VARIABLE_DECLARATION .

    $default  reduce using rule 4 (DECLARATION)


State 6

    5 DECLARATION: FUNCTION_DECLARATION .

    $default  reduce using rule 5 (DECLARATION)


State 7

    6 VARIABLE_DECLARATION: VARIABLE_TYPE . IDENTIFIER_NT SEMICOLON
    7 FUNCTION_DECLARATION: VARIABLE_TYPE . FUNCTION_IDENTIFIER_NT ONB PARAMS CNB COMPOUND_STATEMENT

    IDENTIFIER           shift, and go to state 10
    FUNCTION_IDENTIFIER  shift, and go to state 11

    IDENTIFIER_NT           go to state 12
    FUNCTION_IDENTIFIER_NT  go to state 13


State 8

    0 $accept: PROGRAM $end .

    $default  accept


State 9

    2 DECLARATION_LIST: DECLARATION_LIST DECLARATION .

    $default  reduce using rule 2 (DECLARATION_LIST)


State 10

   52 IDENTIFIER_NT: IDENTIFIER .

    $default  reduce using rule 52 (IDENTIFIER_NT)


State 11

   53 FUNCTION_IDENTIFIER_NT: FUNCTION_IDENTIFIER .

    $default  reduce using rule 53 (FUNCTION_IDENTIFIER_NT)


State 12

    6 VARIABLE_DECLARATION: VARIABLE_TYPE IDENTIFIER_NT . SEMICOLON

    SEMICOLON  shift, and go to state 14


State 13

    7 FUNCTION_DECLARATION: VARIABLE_TYPE FUNCTION_IDENTIFIER_NT . ONB PARAMS CNB COMPOUND_STATEMENT

    ONB  shift, and go to state 15


State 14

    6 VARIABLE_DECLARATION: VARIABLE_TYPE IDENTIFIER_NT SEMICOLON .

    $default  reduce using rule 6 (VARIABLE_DECLARATION)


State 15

    7 FUNCTION_DECLARATION: VARIABLE_TYPE FUNCTION_IDENTIFIER_NT ONB . PARAMS CNB COMPOUND_STATEMENT

    INT  shift, and go to state 1

    $default  reduce using rule 9 (PARAMS)

    PARAMS         go to state 16
    PARAM_LIST_NT  go to state 17
    PARAM          go to state 18
    VARIABLE_TYPE  go to state 19


State 16

    7 FUNCTION_DECLARATION: VARIABLE_TYPE FUNCTION_IDENTIFIER_NT ONB PARAMS . CNB COMPOUND_STATEMENT

    CNB  shift, and go to state 20


State 17

    8 PARAMS: PARAM_LIST_NT .
   10 PARAM_LIST_NT: PARAM_LIST_NT . COMMA PARAM

    COMMA  shift, and go to state 21

    $default  reduce using rule 8 (PARAMS)


State 18

   11 PARAM_LIST_NT: PARAM .

    $default  reduce using rule 11 (PARAM_LIST_NT)


State 19

   12 PARAM: VARIABLE_TYPE . IDENTIFIER_NT

    IDENTIFIER  shift, and go to state 10

    IDENTIFIER_NT  go to state 22


State 20

    7 FUNCTION_DECLARATION: VARIABLE_TYPE FUNCTION_IDENTIFIER_NT ONB PARAMS CNB . COMPOUND_STATEMENT

    OFB  shift, and go to state 23

    COMPOUND_STATEMENT  go to state 24


State 21

   10 PARAM_LIST_NT: PARAM_LIST_NT COMMA . PARAM

    INT  shift, and go to state 1

    PARAM          go to state 25
    VARIABLE_TYPE  go to state 19


State 22

   12 PARAM: VARIABLE_TYPE IDENTIFIER_NT .

    $default  reduce using rule 12 (PARAM)


State 23

   25 COMPOUND_STATEMENT: OFB . STATEMENT_LIST CFB

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 10
    OFB         shift, and go to state 23
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    FOR         shift, and go to state 28
    PRINT       shift, and go to state 29

    STATEMENT_LIST        go to state 30
    STATEMENT             go to state 31
    PRINT_STATEMENT       go to state 32
    COMPOUND_STATEMENT    go to state 33
    IF_STATEMENT          go to state 34
    WHILE_STATEMENT       go to state 35
    FOR_STATEMENT         go to state 36
    INCREMENT_STATEMENT   go to state 37
    DECREMENT_STATEMENT   go to state 38
    VARIABLE_TYPE         go to state 39
    LOCAL_DECLARATION     go to state 40
    ASSIGNMENT_STATEMENT  go to state 41
    IDENTIFIER_NT         go to state 42


State 24

    7 FUNCTION_DECLARATION: VARIABLE_TYPE FUNCTION_IDENTIFIER_NT ONB PARAMS CNB COMPOUND_STATEMENT .

    $default  reduce using rule 7 (FUNCTION_DECLARATION)


State 25

   10 PARAM_LIST_NT: PARAM_LIST_NT COMMA PARAM .

    $default  reduce using rule 10 (PARAM_LIST_NT)


State 26

   26 IF_STATEMENT: IF . ONB EXPRESSION CNB STATEMENT

    ONB  shift, and go to state 43


State 27

   27 WHILE_STATEMENT: WHILE . ONB EXPRESSION CNB STATEMENT

    ONB  shift, and go to state 44


State 28

   28 FOR_STATEMENT: FOR . ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

    ONB  shift, and go to state 45


State 29

   24 PRINT_STATEMENT: PRINT . ONB PRINT_ITEM CNB SEMICOLON

    ONB  shift, and go to state 46


State 30

   13 STATEMENT_LIST: STATEMENT_LIST . STATEMENT
   25 COMPOUND_STATEMENT: OFB STATEMENT_LIST . CFB

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 10
    OFB         shift, and go to state 23
    CFB         shift, and go to state 47
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    FOR         shift, and go to state 28
    PRINT       shift, and go to state 29

    STATEMENT             go to state 48
    PRINT_STATEMENT       go to state 32
    COMPOUND_STATEMENT    go to state 33
    IF_STATEMENT          go to state 34
    WHILE_STATEMENT       go to state 35
    FOR_STATEMENT         go to state 36
    INCREMENT_STATEMENT   go to state 37
    DECREMENT_STATEMENT   go to state 38
    VARIABLE_TYPE         go to state 39
    LOCAL_DECLARATION     go to state 40
    ASSIGNMENT_STATEMENT  go to state 41
    IDENTIFIER_NT         go to state 42


State 31

   14 STATEMENT_LIST: STATEMENT .

    $default  reduce using rule 14 (STATEMENT_LIST)


State 32

   23 STATEMENT: PRINT_STATEMENT .

    $default  reduce using rule 23 (STATEMENT)


State 33

   16 STATEMENT: COMPOUND_STATEMENT .

    $default  reduce using rule 16 (STATEMENT)


State 34

   17 STATEMENT: IF_STATEMENT .

    $default  reduce using rule 17 (STATEMENT)


State 35

   18 STATEMENT: WHILE_STATEMENT .

    $default  reduce using rule 18 (STATEMENT)


State 36

   19 STATEMENT: FOR_STATEMENT .

    $default  reduce using rule 19 (STATEMENT)


State 37

   20 STATEMENT: INCREMENT_STATEMENT .

    $default  reduce using rule 20 (STATEMENT)


State 38

   21 STATEMENT: DECREMENT_STATEMENT .

    $default  reduce using rule 21 (STATEMENT)


State 39

   32 LOCAL_DECLARATION: VARIABLE_TYPE . IDENTIFIER_NT SEMICOLON

    IDENTIFIER  shift, and go to state 10

    IDENTIFIER_NT  go to state 49


State 40

   22 STATEMENT: LOCAL_DECLARATION .

    $default  reduce using rule 22 (STATEMENT)


State 41

   15 STATEMENT: ASSIGNMENT_STATEMENT .

    $default  reduce using rule 15 (STATEMENT)


State 42

   29 INCREMENT_STATEMENT: IDENTIFIER_NT . INC SEMICOLON
   30 DECREMENT_STATEMENT: IDENTIFIER_NT . DEC SEMICOLON
   33 ASSIGNMENT_STATEMENT: IDENTIFIER_NT . EQUALTO EXPRESSION SEMICOLON

    EQUALTO  shift, and go to state 50
    INC      shift, and go to state 51
    DEC      shift, and go to state 52


State 43

   26 IF_STATEMENT: IF ONB . EXPRESSION CNB STATEMENT

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    EXPRESSION     go to state 55
    PEXPRESSION    go to state 56
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 44

   27 WHILE_STATEMENT: WHILE ONB . EXPRESSION CNB STATEMENT

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    EXPRESSION     go to state 59
    PEXPRESSION    go to state 56
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 45

   28 FOR_STATEMENT: FOR ONB . VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

    INT  shift, and go to state 1

    VARIABLE_TYPE  go to state 60


State 46

   24 PRINT_STATEMENT: PRINT ONB . PRINT_ITEM CNB SEMICOLON

    IDENTIFIER  shift, and go to state 10

    PRINT_ITEM     go to state 61
    IDENTIFIER_NT  go to state 62


State 47

   25 COMPOUND_STATEMENT: OFB STATEMENT_LIST CFB .

    $default  reduce using rule 25 (COMPOUND_STATEMENT)


State 48

   13 STATEMENT_LIST: STATEMENT_LIST STATEMENT .

    $default  reduce using rule 13 (STATEMENT_LIST)


State 49

   32 LOCAL_DECLARATION: VARIABLE_TYPE IDENTIFIER_NT . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 50

   33 ASSIGNMENT_STATEMENT: IDENTIFIER_NT EQUALTO . EXPRESSION SEMICOLON

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    EXPRESSION     go to state 64
    PEXPRESSION    go to state 56
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 51

   29 INCREMENT_STATEMENT: IDENTIFIER_NT INC . SEMICOLON

    SEMICOLON  shift, and go to state 65


State 52

   30 DECREMENT_STATEMENT: IDENTIFIER_NT DEC . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 53

   51 INTEGER_NT: NUMBER .

    $default  reduce using rule 51 (INTEGER_NT)


State 54

   49 PEXPRESSION: ONB . EXPRESSION CNB

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    EXPRESSION     go to state 67
    PEXPRESSION    go to state 56
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 55

   26 IF_STATEMENT: IF ONB EXPRESSION . CNB STATEMENT

    CNB  shift, and go to state 68


State 56

   34 EXPRESSION: PEXPRESSION .
   35           | PEXPRESSION . PLUS PEXPRESSION
   36           | PEXPRESSION . MINUS PEXPRESSION
   37           | PEXPRESSION . MULTIPLY PEXPRESSION
   38           | PEXPRESSION . BAND PEXPRESSION
   39           | PEXPRESSION . BXOR PEXPRESSION
   40           | PEXPRESSION . BOR PEXPRESSION
   41           | PEXPRESSION . GE PEXPRESSION
   42           | PEXPRESSION . LE PEXPRESSION
   43           | PEXPRESSION . GT PEXPRESSION
   44           | PEXPRESSION . LT PEXPRESSION
   45           | PEXPRESSION . EE PEXPRESSION
   46           | PEXPRESSION . NEQ PEXPRESSION

    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    MULTIPLY  shift, and go to state 71
    LT        shift, and go to state 72
    GT        shift, and go to state 73
    LE        shift, and go to state 74
    GE        shift, and go to state 75
    EE        shift, and go to state 76
    NEQ       shift, and go to state 77
    BAND      shift, and go to state 78
    BOR       shift, and go to state 79
    BXOR      shift, and go to state 80

    $default  reduce using rule 34 (EXPRESSION)


State 57

   47 PEXPRESSION: INTEGER_NT .

    $default  reduce using rule 47 (PEXPRESSION)


State 58

   48 PEXPRESSION: IDENTIFIER_NT .

    $default  reduce using rule 48 (PEXPRESSION)


State 59

   27 WHILE_STATEMENT: WHILE ONB EXPRESSION . CNB STATEMENT

    CNB  shift, and go to state 81


State 60

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE . EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    EXPRESSION     go to state 82
    PEXPRESSION    go to state 56
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 61

   24 PRINT_STATEMENT: PRINT ONB PRINT_ITEM . CNB SEMICOLON

    CNB  shift, and go to state 83


State 62

   50 PRINT_ITEM: IDENTIFIER_NT .

    $default  reduce using rule 50 (PRINT_ITEM)


State 63

   32 LOCAL_DECLARATION: VARIABLE_TYPE IDENTIFIER_NT SEMICOLON .

    $default  reduce using rule 32 (LOCAL_DECLARATION)


State 64

   33 ASSIGNMENT_STATEMENT: IDENTIFIER_NT EQUALTO EXPRESSION . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 65

   29 INCREMENT_STATEMENT: IDENTIFIER_NT INC SEMICOLON .

    $default  reduce using rule 29 (INCREMENT_STATEMENT)


State 66

   30 DECREMENT_STATEMENT: IDENTIFIER_NT DEC SEMICOLON .

    $default  reduce using rule 30 (DECREMENT_STATEMENT)


State 67

   49 PEXPRESSION: ONB EXPRESSION . CNB

    CNB  shift, and go to state 85


State 68

   26 IF_STATEMENT: IF ONB EXPRESSION CNB . STATEMENT

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 10
    OFB         shift, and go to state 23
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    FOR         shift, and go to state 28
    PRINT       shift, and go to state 29

    STATEMENT             go to state 86
    PRINT_STATEMENT       go to state 32
    COMPOUND_STATEMENT    go to state 33
    IF_STATEMENT          go to state 34
    WHILE_STATEMENT       go to state 35
    FOR_STATEMENT         go to state 36
    INCREMENT_STATEMENT   go to state 37
    DECREMENT_STATEMENT   go to state 38
    VARIABLE_TYPE         go to state 39
    LOCAL_DECLARATION     go to state 40
    ASSIGNMENT_STATEMENT  go to state 41
    IDENTIFIER_NT         go to state 42


State 69

   35 EXPRESSION: PEXPRESSION PLUS . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 87
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 70

   36 EXPRESSION: PEXPRESSION MINUS . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 88
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 71

   37 EXPRESSION: PEXPRESSION MULTIPLY . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 89
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 72

   44 EXPRESSION: PEXPRESSION LT . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 90
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 73

   43 EXPRESSION: PEXPRESSION GT . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 91
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 74

   42 EXPRESSION: PEXPRESSION LE . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 92
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 75

   41 EXPRESSION: PEXPRESSION GE . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 93
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 76

   45 EXPRESSION: PEXPRESSION EE . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 94
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 77

   46 EXPRESSION: PEXPRESSION NEQ . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 95
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 78

   38 EXPRESSION: PEXPRESSION BAND . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 96
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 79

   40 EXPRESSION: PEXPRESSION BOR . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 97
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 80

   39 EXPRESSION: PEXPRESSION BXOR . PEXPRESSION

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    PEXPRESSION    go to state 98
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 81

   27 WHILE_STATEMENT: WHILE ONB EXPRESSION CNB . STATEMENT

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 10
    OFB         shift, and go to state 23
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    FOR         shift, and go to state 28
    PRINT       shift, and go to state 29

    STATEMENT             go to state 99
    PRINT_STATEMENT       go to state 32
    COMPOUND_STATEMENT    go to state 33
    IF_STATEMENT          go to state 34
    WHILE_STATEMENT       go to state 35
    FOR_STATEMENT         go to state 36
    INCREMENT_STATEMENT   go to state 37
    DECREMENT_STATEMENT   go to state 38
    VARIABLE_TYPE         go to state 39
    LOCAL_DECLARATION     go to state 40
    ASSIGNMENT_STATEMENT  go to state 41
    IDENTIFIER_NT         go to state 42


State 82

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION . SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

    SEMICOLON  shift, and go to state 100


State 83

   24 PRINT_STATEMENT: PRINT ONB PRINT_ITEM CNB . SEMICOLON

    SEMICOLON  shift, and go to state 101


State 84

   33 ASSIGNMENT_STATEMENT: IDENTIFIER_NT EQUALTO EXPRESSION SEMICOLON .

    $default  reduce using rule 33 (ASSIGNMENT_STATEMENT)


State 85

   49 PEXPRESSION: ONB EXPRESSION CNB .

    $default  reduce using rule 49 (PEXPRESSION)


State 86

   26 IF_STATEMENT: IF ONB EXPRESSION CNB STATEMENT .

    $default  reduce using rule 26 (IF_STATEMENT)


State 87

   35 EXPRESSION: PEXPRESSION PLUS PEXPRESSION .

    $default  reduce using rule 35 (EXPRESSION)


State 88

   36 EXPRESSION: PEXPRESSION MINUS PEXPRESSION .

    $default  reduce using rule 36 (EXPRESSION)


State 89

   37 EXPRESSION: PEXPRESSION MULTIPLY PEXPRESSION .

    $default  reduce using rule 37 (EXPRESSION)


State 90

   44 EXPRESSION: PEXPRESSION LT PEXPRESSION .

    $default  reduce using rule 44 (EXPRESSION)


State 91

   43 EXPRESSION: PEXPRESSION GT PEXPRESSION .

    $default  reduce using rule 43 (EXPRESSION)


State 92

   42 EXPRESSION: PEXPRESSION LE PEXPRESSION .

    $default  reduce using rule 42 (EXPRESSION)


State 93

   41 EXPRESSION: PEXPRESSION GE PEXPRESSION .

    $default  reduce using rule 41 (EXPRESSION)


State 94

   45 EXPRESSION: PEXPRESSION EE PEXPRESSION .

    $default  reduce using rule 45 (EXPRESSION)


State 95

   46 EXPRESSION: PEXPRESSION NEQ PEXPRESSION .

    $default  reduce using rule 46 (EXPRESSION)


State 96

   38 EXPRESSION: PEXPRESSION BAND PEXPRESSION .

    $default  reduce using rule 38 (EXPRESSION)


State 97

   40 EXPRESSION: PEXPRESSION BOR PEXPRESSION .

    $default  reduce using rule 40 (EXPRESSION)


State 98

   39 EXPRESSION: PEXPRESSION BXOR PEXPRESSION .

    $default  reduce using rule 39 (EXPRESSION)


State 99

   27 WHILE_STATEMENT: WHILE ONB EXPRESSION CNB STATEMENT .

    $default  reduce using rule 27 (WHILE_STATEMENT)


State 100

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON . EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

    IDENTIFIER  shift, and go to state 10
    NUMBER      shift, and go to state 53
    ONB         shift, and go to state 54

    EXPRESSION     go to state 102
    PEXPRESSION    go to state 56
    INTEGER_NT     go to state 57
    IDENTIFIER_NT  go to state 58


State 101

   24 PRINT_STATEMENT: PRINT ONB PRINT_ITEM CNB SEMICOLON .

    $default  reduce using rule 24 (PRINT_STATEMENT)


State 102

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION . SEMICOLON INCREMENT_STATEMENT CNB STATEMENT

    SEMICOLON  shift, and go to state 103


State 103

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON . INCREMENT_STATEMENT CNB STATEMENT

    IDENTIFIER  shift, and go to state 10

    INCREMENT_STATEMENT  go to state 104
    IDENTIFIER_NT        go to state 105


State 104

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT . CNB STATEMENT

    CNB  shift, and go to state 106


State 105

   29 INCREMENT_STATEMENT: IDENTIFIER_NT . INC SEMICOLON

    INC  shift, and go to state 51


State 106

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB . STATEMENT

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 10
    OFB         shift, and go to state 23
    IF          shift, and go to state 26
    WHILE       shift, and go to state 27
    FOR         shift, and go to state 28
    PRINT       shift, and go to state 29

    STATEMENT             go to state 107
    PRINT_STATEMENT       go to state 32
    COMPOUND_STATEMENT    go to state 33
    IF_STATEMENT          go to state 34
    WHILE_STATEMENT       go to state 35
    FOR_STATEMENT         go to state 36
    INCREMENT_STATEMENT   go to state 37
    DECREMENT_STATEMENT   go to state 38
    VARIABLE_TYPE         go to state 39
    LOCAL_DECLARATION     go to state 40
    ASSIGNMENT_STATEMENT  go to state 41
    IDENTIFIER_NT         go to state 42


State 107

   28 FOR_STATEMENT: FOR ONB VARIABLE_TYPE EXPRESSION SEMICOLON EXPRESSION SEMICOLON INCREMENT_STATEMENT CNB STATEMENT .

    $default  reduce using rule 28 (FOR_STATEMENT)
